[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/images/GrassBackground.png" type="Texture" id=1]
[ext_resource path="res://PeaberryBase.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Multiplayer/WaitingMap_maze.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -736.0
margin_right = 1312.0

[node name="Background" type="Sprite" parent="."]
position = Vector2( -88, -64 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2500, 1400 )

[node name="MazeGenerator" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="YSort" type="YSort" parent="MazeGenerator"]

[node name="Start_Game" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -107.0
margin_top = -29.0
margin_right = 107.0
margin_bottom = -5.0
custom_colors/font_color_hover = Color( 0.992157, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "START GAME"

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -653.0
margin_top = -29.0
margin_right = -504.0
margin_bottom = -5.0
custom_colors/font_color_hover = Color( 0.992157, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "BACK"

[connection signal="pressed" from="Start_Game" to="MazeGenerator" method="_on_Start_Game_pressed"]
[connection signal="pressed" from="Back" to="MazeGenerator" method="_on_Back_pressed"]
